--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "db:seed": "BACKPACK_ENV=seeder backpack build; node ./build/tools/seeder/main.js"
   },
   "dependencies": {
+    "@nuxtjs/apollo": "^4.0.0-rc8",
     "@nuxtjs/axios": "^5.5.4",
+    "apollo-boost": "^0.4.3",
     "apollo-server-express": "^2.6.7",
     "backpack-core": "^0.8.3",
     "bcrypt": "^3.0.6",
